fix(mobile): complete notifications GPS signup and profiles