@@ -1,22 +1,2 @@
-package com.veyra.provider;
-import org.springframework.stereotype.Component;
-import org.springframework.web.client.RestClient;
-import java.util.*;
-
-@Component
-public class OsrmRoutingProvider implements RoutingProvider {
-  private final RestClient http=RestClient.builder().baseUrl("https://router.project-osrm.org").build();
-
-  @Override
-  public Route route(double fromLat,double fromLng,double toLat,double toLng){
-    Map<?,?> body=http.get().uri("/route/v1/driving/"+fromLng+","+fromLat+";"+toLng+","+toLat+"?overview=false")
-      .retrieve().body(Map.class);
-    if(body==null || !(body.get("routes") instanceof List<?> routes) || routes.isEmpty())
-      throw new IllegalStateException("ROUTE_NOT_FOUND");
-    Map<?,?> r=(Map<?,?>)routes.getFirst();
-    return new Route(
-      ((Number)r.get("distance")).intValue(),
-      ((Number)r.get("duration")).intValue(),
-      null);
-  }
-}
+package com.veyra.provider;import org.springframework.stereotype.Component;import org.springframework.web.client.RestClient;import java.util.*;
+@Component public class OsrmRoutingProvider implements RoutingProvider{private final RestClient http=RestClient.builder().baseUrl("https://router.project-osrm.org").build();public Route route(double a,double b,double c,double d){Map<?,?> body=http.get().uri("/route/v1/driving/"+b+","+a+";"+d+","+c+"?overview=full&geometries=geojson").retrieve().body(Map.class);if(body==null||!(body.get("routes") instanceof List<?> rs)||rs.isEmpty())throw new IllegalStateException("ROUTE_NOT_FOUND");Map<?,?>r=(Map<?,?>)rs.getFirst();List<Map<String,Double>>p=new ArrayList<>();if(r.get("geometry") instanceof Map<?,?>g&&g.get("coordinates") instanceof List<?>cs)for(Object raw:cs)if(raw instanceof List<?>q&&q.size()>1&&q.get(0) instanceof Number lng&&q.get(1) instanceof Number lat)p.add(Map.of("lat",lat.doubleValue(),"lng",lng.doubleValue()));return new Route(((Number)r.get("distance")).intValue(),((Number)r.get("duration")).intValue(),p);}}
